# Expense-Calculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/bot/: __init__.py  handlers.py  keyboards.py
app/models/: __init__.py  category.py  expense.py  user.py
app/schemas/: __init__.py  expense.py
app/services/: __init__.py  chart_service.py  expense_service.py  vision_service.py
